# ADC_001_NumPy

./: Makefile.am  README.md  aclocal.m4  adc001py.i  bootstrap  configure.ac  sample.py  test.py
CLib/: Makefile.am  __init__.py  adc001py.i  adcdriver_host.c  adcdriver_host.h  prussdrv.c  setup.py  spidriver_host.c  spidriver_host.h
DeviceTree/: Makefile.am
Doc/: Makefile.am
PRU/: Makefile.am
Scripts/: Makefile.am
